Fix image animation in about us section; update newsletter image width on tablet

--- a/static/css/sections.less
+++ b/static/css/sections.less
@@ -278,7 +278,7 @@
 
             .animation-container--apple {
                 img {
-                    animation: 16s ease-in-out 1s 1000 move-up-and-down;
+                    animation: 16s ease-in-out 1s 1000 move-up-and-down-about-us;
                 }
             }
 
@@ -296,7 +296,7 @@
                     width: 20%;
                     margin-top: 0.5%;
                     margin-left: 76%;
-                    animation: 8s linear 1s 1000 move-up-and-down;
+                    animation: 16s linear 1s 1000 move-up-and-down-about-us;
 
                 }
             }
@@ -325,18 +325,18 @@
                 }
             }
 
-            @keyframes move-up-and-down {
+            @keyframes move-up-and-down-about-us {
                 0% {
                     transform: translateY(0);
                 }
                 25% {
-                    transform: translateY(2%);
+                    transform: translateY(1%);
                 }
                 50% {
                     transform: translateY(0%);
                 }
                 75% {
-                    transform: translateY(2%);
+                    transform: translateY(1%);
                 }
                 100% {
                     transform: translateY(0%);
@@ -649,7 +649,7 @@
 
             .newsletter--image {
                 img {
-                    width: 65%;
+                    width: 100%;
                 }
             }
         }
